--- a/app/src/main/res/layout/activity_memo_image_pager.xml
+++ b/app/src/main/res/layout/activity_memo_image_pager.xml
@@ -7,7 +7,7 @@
     android:background="#000000"
     tools:context=".memo.MemoImagePagerActivity">
 
-    <com.example.junmung.StudyHelper.memo.CustomViewPager
+    <com.example.junmung.studyhelper.memo.CustomViewPager
         android:id="@+id/activity_memo_image_pager_ViewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
